time-odyssey - smell tests input file jan 25